--- a/local/components/web/create.element/templates/.default/style.css
+++ b/local/components/web/create.element/templates/.default/style.css
@@ -285,6 +285,10 @@
     color: #333;
 }
 
+.form-group__label--up {
+    top: -3px;
+}
+
 .form-group__label span {
     font-weight: 400;
     font-size: 14px;
