--- a/bitrix/templates/aspro_max/components/bitrix/news.list/ads/style.css
+++ b/bitrix/templates/aspro_max/components/bitrix/news.list/ads/style.css
@@ -1084,7 +1084,7 @@ ul.menu li.menu-item {
     left: -1px;
     width: 21px;
     height: 21px;
-    background: url("../img/check.svg") no-repeat center;
+    background: url("./images/check.svg") no-repeat center;
     transition: .3s;
     opacity: 0;
 }
