--- a/bitrix/templates/aspro_max/css/catalog/filter.css
+++ b/bitrix/templates/aspro_max/css/catalog/filter.css
@@ -377,7 +377,7 @@ input[type='text'].choices__input:focus {
 
 .choices__list--dropdown {
     visibility: hidden;
-    z-index: 3;
+    z-index: 10;
     position: absolute;
     width: 100%;
     border: none;
@@ -388,6 +388,10 @@ input[type='text'].choices__input:focus {
 
 .choices__list--dropdown .choices__list {
     position: static;
+}
+
+.custom-select-inner .choices__item--choice[data-id="1"] {
+    display: none;
 }
 
 .form-group-custom-select .choices__list--dropdown .choices__item[data-value="reset"] {
@@ -462,8 +466,8 @@ input[type='text'].choices__input:focus {
 
 .custom-input {
     width: 100%;
-    border: 1px solid #ebebeb !important;
-    border-radius: 3px !important;
+    border: 1px solid #ebebeb;
+    border-radius: 3px;
     padding: 10px 30px;
     background: #fafafa;
     font-weight: 400;
@@ -1547,15 +1551,18 @@ input[type="file"] {
 }
 
 .save-search {
-    position: absolute;
-    right: 40px;
-    top: 40px;
     display: flex;
     align-items: center;
-    gap: 6px;
+    width: max-content;
     font-size: 14px;
     color: #ed1c24;
     cursor: pointer;
+    /*z-index: 2;*/
+}
+
+.save-search span{
+    align-items: center;
+    gap: 6px;
 }
 
 .save-search:hover {
@@ -1637,6 +1644,7 @@ input[type="file"] {
     display: flex;
     align-items: center;
     justify-content: center;
+    visibility: hidden;
     width: 27px;
     height: 27px;
     font-weight: 600;
@@ -1687,14 +1695,32 @@ input[type="file"] {
 }
 
 .form-header {
+    display: flex;
+    flex-direction: row-reverse;
     margin-bottom: 20px;
 }
 
 .choices__list--multiple {
+    max-width: 100%;
     display: flex;
-    max-width: 86%;
     flex-wrap: nowrap;
-    overflow: scroll;
+    gap: 3px;
+    line-height: 27px;
+    font-weight: 400;
+    font-size: 14px;
+    color: #ed1c24;
+}
+
+.multipleSelectedContent{
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 27px;
+}
+
+.multipleSelectedCnt {
+    line-height: 27px;
 }
 
 .choices__list--multiple .choices__item {
@@ -1715,11 +1741,14 @@ input[type="file"] {
     display: flex;
 }
 
-.choices__inner.is-active {
+.choices__inner.is-active,
+.is-active .choices__inner{
     border: 1px solid #ffdadc;
     background: #ffeded;
     color: #ed1c24;
 }
+
+
 
 .choices.is-active:after {
     border-color: #ed1c24 transparent transparent;
@@ -1856,6 +1885,7 @@ input[type="file"] {
 .form-row__col-30 {
     display: flex;
     width: calc(100% / 3 - 40px / 3);
+    position: relative;
 }
 
 .form-row__col-10 {
@@ -1868,6 +1898,7 @@ input[type="file"] {
 }
 
 .is-active .custom-select--multiple .choices__input {
+    display: none;
     max-width: 30%;
     min-width: initial !important;
     width: initial !important;
@@ -1983,11 +2014,6 @@ input[type="file"] {
 
     .selection-block {
         padding: 65px 20px 40px;
-    }
-
-    .save-search {
-        top: 30px;
-        right: 20px;
     }
 
     .form-group-custom-select .choices[data-type*=select-one] .choices__inner {
@@ -2134,28 +2160,38 @@ input[type="file"] {
     fill: #8c8c8c;
 }
 
+.save-search__prev{
+    display: flex;
+}
+
 .save-search.active .save-search__prev{
     display: none;
 }
 
 .save-search.active .save-search__save{
-    display: block;
+    display: flex;
 }
 
 .save-search-popup{
     display: none;
     position: absolute;
+    max-width: 456px;
+    width: 100%;
     right: 40px;
     top: 75px;
     box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.08);
     background: #fff;
     border-radius: 3px;
     padding: 30px;
-    z-index: 2;
+    z-index: 6;
 }
 
 .save-search-popup.active{
     display: block;
+}
+
+.search-popup__parameters:hover{
+    color: #ed1c24;
 }
 
 .search-popup__mark{
@@ -2217,4 +2253,240 @@ input[type="file"] {
 
 .choices.is-disabled input{
     width: 100% !important;
+}
+
+/*new styles*/
+.search-popup__mark{
+    max-width: 395px;
+    -webkit-line-clamp: 3;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.search-popup__parameters{
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+
+
+@media (min-width: 1380px) {
+    .form-row-checkbox.form-row-checkbox--selection{
+        gap: 10px 60px;
+        flex-direction: row;
+        max-height: initial;
+    }
+}
+
+.form-row__col--price .form-row__col{
+    width: auto;
+    flex-grow: 1;
+}
+
+.form-row__col--price .form-row__col:last-child{
+    max-width: 109px;
+    margin-left: 10px;
+}
+
+.form-row__col--price .form-row__col:last-child .choices__list--dropdown{
+    padding-top: 0;
+}
+
+.form-row__col--price .form-row__col:last-child .choices__list--dropdown .choices__list{
+    margin-right: 0;
+}
+
+.form-row__col--price .form-row__col:last-child .choices__list--dropdown .choices__item{
+    margin-right: 0;
+}
+
+@media (max-width: 768px) {
+    .form-row__col--price .form-row__col:last-child{
+        max-width: 87px;
+        width: 100%;
+    }
+    .form-row__col--price .form-row__col {
+        width: calc(50% - 97px);
+        flex-grow: 1;
+    }
+
+    .form-row__col--price .choices[data-type*=select-one]:after{
+        right: 17px;
+    }
+}
+
+.selection-block .is-active .form-group-custom-select .choices__inner,
+.form-group-custom-select .is-active  .choices__inner{
+    background: #ffeded;
+}
+
+.choices__list--multiple .choices__item,
+.selection-block .form-group-custom-select .is-active .choices__input{
+    display: none;
+}
+
+
+.form-group-custom-select .choices__list--dropdown .choices__item--disabled{
+    padding-left: 20px;
+    font-size: 13px;
+    color: #9f9f9f;
+    pointer-events: none;
+    user-select: none;
+}
+
+.form-group-custom-select .choices__list--dropdown .choices__item--disabled[data-value="all_group"]{
+    border-top: 1px solid #ebebeb;
+}
+
+.row--brand .choices[data-type*=select-one] .choices__input.choices__input--cloned{
+    bottom: 0;
+    width: 90%;
+    background: #fafafa;
+    border: none;
+    height: 38px;
+    top: 1px;
+    left: 1px;
+    padding-left: 30px;
+}
+
+.result-block {
+    position: relative;
+}
+
+.save-inner{
+    /*position: absolute;*/
+    /*right: 40px;*/
+    /*top: 40px;*/
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+.save-list-btn{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-weight: 400;
+    font-size: 14px;
+    color: #ed1c24;
+    transition: .3s;
+    cursor: pointer;
+}
+.save-list-btn path{
+    fill: #ed1c24;
+    transition: .3s;
+}
+.save-list-btn:hover{
+    font-weight: 400;
+    font-size: 14px;
+    color: #8c8c8c;
+}
+.save-list-btn:hover path{
+    fill: #8c8c8c;
+}
+.save-list-container{
+    position: relative;
+    /*z-index: 2;*/
+}
+.save-list{
+    width: 464px;
+    max-height: 568px;
+    overflow: auto;
+    padding: 8px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    top: 100%;
+    right: 0;
+    background: #fff;
+    z-index: -1;
+    opacity: 0;
+    transition: .3s;
+}
+.save-list::-webkit-scrollbar {
+    width: 3px;
+    border-radius: 3px;
+}
+.save-list::-webkit-scrollbar-track {
+}
+.save-list::-webkit-scrollbar-thumb {
+    background-color: #ed1c24;
+    border-left: 0;
+    border-right: 0;
+}
+.save-list.active{
+    z-index: 1;
+    opacity: 1;
+}
+.save-list__item{
+    box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.08);
+    background: #fff;
+    border-radius: 3px;
+    padding: 30px;
+}
+.remove-save-item{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 600;
+    font-size: 13px;
+    text-transform: uppercase;
+    color: #ed1c24;
+    margin-top: 30px;
+    cursor: pointer;
+}
+.save-list__item .form-row-checkbox--selection{
+    margin-bottom: 20px;
+}
+.save-list-container .choices__list--dropdown{
+    position: fixed;
+    z-index: -1;
+    height: 0;
+}
+.save-list-container .choices__list--dropdown.is-active{
+    position: fixed;
+    z-index: 1;
+    height: initial;
+    min-height: 100px;
+    overflow-y: auto;
+}
+@media (max-width: 1550px) {
+    .save-inner {
+        top: 30px;
+        right: 20px;
+    }
+}
+@media (max-width: 1024px) {
+    .save-list.active{
+        z-index: 6;
+    }
+}
+@media (max-width: 768px) {
+    .save-search-popup{
+        width: auto;
+    }
+    .save-list{
+        width: calc(100vw - 20px);
+        right: -148px;
+    }
+    .save-list__item{
+        padding: 30px 20px;
+    }
+}
+
+body.no-scroll{
+    width: 100%;
+    overflow-y:  hidden;
+}
+
+/*body.no-scroll.fake{*/
+/*    padding-right: 17px;*/
+/*}*/
+@media (max-width: 1300px) {
+    body.no-scroll{
+        padding-right: 0;
+    }
 }
