--- a/bitrix/templates/aspro_max/css/catalog/filter.css
+++ b/bitrix/templates/aspro_max/css/catalog/filter.css
@@ -257,7 +257,7 @@ input[type='text'].choices__input:focus {
 
 .form-group {
     position: relative;
-    /*max-width: 690px;*/
+    max-width: 690px;
     margin: 0 auto;
 }
 
