--- a/bitrix/templates/aspro_max/components/bitrix/news.list/personal-list/style.css
+++ b/bitrix/templates/aspro_max/components/bitrix/news.list/personal-list/style.css
@@ -982,6 +982,10 @@ ul.menu li.menu-item {
     color: #ed1c24;
 }
 
+/*ul.submenu li.menu-item > a.last {*/
+/*    color: #797979;*/
+/*}*/
+
 .menu .submenu{
     padding: 6px 0 0 17px;
 }
@@ -1000,13 +1004,13 @@ ul.menu li.menu-item {
 }
 
 .menu-item > a:hover,
-.submenu .submenu .submenu .menu-item > a:hover {
+.submenu .submenu .submenu .menu-item > a:hover,
+ul.submenu li.menu-item > a.last:hover{
     color: #ed1c24;
 }
 
-.submenu .submenu .submenu .menu-item > a.selected {
-    color: black;
-    font-weight: 400;
+li.menu-item > a.selected{
+    font-weight: 800;
 }
 
 .menu-item a .quantity{
@@ -1255,7 +1259,7 @@ ul.menu li.menu-item {
     border: 1px solid #ebebeb;
     border-radius: 3px;
     padding: 16px 30px;
-    width: 213px;
+    width: 100%;
     height: 41px !important;
     background: #fafafa;
     outline: none;
@@ -1372,7 +1376,12 @@ ul.menu li.menu-item {
 }
 
 .product-update .product-custom-block .choices__inner{
-    width: 213px;
+    width: 20vw;
+    max-width: 400px;
+}
+
+.product-update .product-custom-block--small .choices__inner {
+    width: 110px;
 }
 
 .all-product-text{
@@ -1420,6 +1429,14 @@ ul.menu li.menu-item {
     .product-block .btn-info-update {
         display: flex;
     }
+
+    .product-update .product-custom-block .choices__inner{
+        width: 30vw;
+    }
+
+    .product-update .product-custom-block--small .choices__inner{
+        width: 110px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1437,6 +1454,7 @@ ul.menu li.menu-item {
     .product-update .choices__inner,
     .product-update .product-custom-block .choices__inner{
         width: 100%;
+        max-width: none;
     }
 
     .product-advert__item {
