--- a/bitrix/templates/aspro_max/css/custom.css
+++ b/bitrix/templates/aspro_max/css/custom.css
@@ -23,3 +23,13 @@ body .right_block.wide_ {
     max-height: 60vh;
     overflow: auto;
 }
+
+.breadcrumbs__dropdown::-webkit-scrollbar {
+    width: 3px;
+    border-radius: 3px;
+}
+.breadcrumbs__dropdown::-webkit-scrollbar-thumb {
+    background-color: #ed1c24;
+    border-left: 0;
+    border-right: 0;
+}
