--- a/bitrix/templates/aspro_max/css/catalog/filter.css
+++ b/bitrix/templates/aspro_max/css/catalog/filter.css
@@ -1,15 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wdth,wght@75..100,300..800&display=swap');
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style-type: none;
-    font-family: "Open Sans", sans-serif;
-    outline: none;
-    border: none;
+#filter {
     line-height: normal;
+}
+
+button {
+    border: none;
 }
 
 ::after, ::before {
