--- a/bitrix/templates/aspro_max/css/catalog/filter.css
+++ b/bitrix/templates/aspro_max/css/catalog/filter.css
@@ -1943,9 +1943,9 @@ input[type="file"] {
     width: initial;
 }
 
-.form-row-checkbox--selection {
+/*.form-row-checkbox--selection {
     max-height: 90px;
-}
+}*/
 
 .form-row-checkbox--selection.form-row-checkbox .col {
     max-width: 275px;
@@ -2023,7 +2023,7 @@ input[type="file"] {
     }
 
     .selection-block {
-        padding: 65px 20px 40px;
+        padding: 21px 20px 40px;
     }
 
     .form-group-custom-select .choices[data-type*=select-one] .choices__inner {
@@ -2323,14 +2323,14 @@ input[type="file"] {
 }
 
 
-
-@media (min-width: 1380px) {
-    .form-row-checkbox.form-row-checkbox--selection{
-        gap: 10px 60px;
-        flex-direction: row;
-        max-height: initial;
-    }
+@media (min-width: 1300px) {
+  .form-row-checkbox--selection.form-row-checkbox{
+    max-height: initial;
+    flex-direction: row;
+    gap: 10px 4.5%;
+  }
 }
+
 
 .form-row__col--price .form-row__col{
     width: 40%;
@@ -2572,4 +2572,246 @@ body.no-scroll{
 
 .container.CUSTOM_FILTER {
     overflow: visible;
+}
+
+@media (min-width: 1270px) and (max-width: 1450px) {
+  .choices:after,
+  .choices[data-type*=select-one]:after{
+    right: 10px;
+  }
+}
+
+
+
+
+.categories{
+    display: none;
+    margin: 20px 0;
+}
+
+.categories-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 15px;
+}
+
+.categories-list__el{
+    font-weight: 400;
+    font-size: 14px;
+    color: #f00;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.categories-list__el:hover{
+    color: #d2020a;
+}
+
+.product-name .form-group__label{
+    position: static;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.product-name .form-group{
+    display: flex;
+    /*align-items: center;*/
+    /*gap: 20px;*/
+}
+
+.categories-title{
+    font-size: 13px;
+    color: #666;
+    margin-bottom: 10px;
+}
+
+.step-form__inner--big {
+    max-width: 1112px;
+    margin: 0 auto;
+}
+
+.step-form__inner--big .form-group {
+    width: 100%;
+    max-width: 100%;
+}
+
+.category-selection{
+    display: flex;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.category-title{
+    font-weight: 600;
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.category-selection-main,
+.category-selection-subcategory{
+    padding: 40px;
+    background: #fafafa;
+    border: 1px solid #ececec;
+    border-radius: 3px;
+}
+
+.form-wrapper.error .category-selection-main,
+.form-wrapper.error .category-selection-subcategory{
+    border-color: #ed1c24;
+}
+
+
+.category-selection-main{
+    width: 31%;
+}
+
+.category-selection-subcategory{
+    width: 69%;
+}
+
+.category-list--selection{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background: transparent;
+    padding: 0;
+}
+
+.category-list--selection .category-list__item{
+    padding-left: 0;
+    margin: 0;
+}
+
+.category-list--selection .category-list__item::before {
+    display: none;
+}
+
+.category-list__item a{
+    font-weight: 400;
+    font-size: 14px;
+    color: #333;
+    transition: .3s;
+}
+
+.category-list__item a:hover,
+.category-list--selection .category-list__item.is-active a{
+    color: #ed1c24;
+}
+
+.category-selection-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 24px;
+    margin-top: 20px;
+}
+
+li.category-selection-list__item{
+    width: 100%;
+    max-width: 320px;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: -0.01em;
+    color: #333;
+    margin: 0;
+    transition: 0.3s;
+}
+
+li.category-selection-list__item::before {
+    display: none;
+}
+
+.category-selection-list__item:hover,
+.category-selection-list__item.active{
+    font-size: 14px;
+    line-height: 16px;
+    color: #ed1c24;
+    cursor: pointer;
+}
+
+.category-selection-ready{
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 40px;
+    background: #fafafa;
+    border: 1px solid #ececec;
+    border-radius: 3px;
+    margin-top: 20px;
+}
+
+.category-selection-ready .category-title{
+    margin-bottom: 13px;
+}
+
+.category-selection-ready.active{
+    display: flex;
+}
+
+.category-selection-ready__main{
+    font-weight: 400;
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 19px;
+}
+
+.category-selection-content__item{
+    display: none;
+}
+
+.category-selection-content__item.is-active{
+    display: block;
+}
+
+.category-selection-ready-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 18px 36px;
+    border: 1px solid #ed1c24;
+    border-radius: 53px;
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+    color: #ed1c24;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.category-selection-ready-btn:hover{
+    background: #db2f2e;
+    color: #fff;
+}
+
+.category-selection-ready-btn:hover path{
+    fill: #fff;
+}
+
+@media (max-width: 1024px) {
+    .step-form__inner--big .form-group{
+        align-items: flex-start;
+        flex-direction: column;
+        gap: 6px;
+    }
+
+    .category-selection{
+        flex-direction: column;
+    }
+
+    .category-selection-main,
+    .category-selection-subcategory{
+        width: 100%;
+        padding: 30px;
+    }
+
+    .category-selection-ready{
+        padding: 30px;
+    }
+
+    .category-selection-ready-btn{
+        font-size: 13px;
+        padding: 18px 30px;
+    }
 }
