style : filter, mobile version, personal-list, footr subscribe, categories on add page

--- a/bitrix/templates/aspro_max/css/catalog/filter.css
+++ b/bitrix/templates/aspro_max/css/catalog/filter.css
@@ -48,6 +48,10 @@ input[type='text'].choices__input:focus {
     padding: 23px;
 }
 
+.step-category-container:first-child {
+    width: 100%;
+}
+
 .step-category-inner {
     display: flex;
     flex-wrap: wrap;
