--- a/bitrix/templates/aspro_max/css/catalog/filter.css
+++ b/bitrix/templates/aspro_max/css/catalog/filter.css
@@ -1925,7 +1925,8 @@ input[type="file"] {
 }
 
 .is-active .custom-select--multiple .choices__input {
-    display: none;
+    opacity: 0;
+    /*display: none;*/
     max-width: 30%;
     min-width: initial !important;
     width: initial !important;
