--- a/bitrix/templates/aspro_max/css/catalog/filter.css
+++ b/bitrix/templates/aspro_max/css/catalog/filter.css
@@ -1927,9 +1927,9 @@ input[type="file"] {
 .is-active .custom-select--multiple .choices__input {
     opacity: 0;
     /*display: none;*/
-    max-width: 0;
+    max-width: 30%;
     min-width: initial !important;
-    width: 0 !important;
+    width: initial !important;
 }
 
 .custom-select--small .choices__input {
